Large screen version

--- a/index.html
+++ b/index.html
@@ -32,27 +32,37 @@
         <p><a href="#">Contact</a></p>
     </div>
   </div>
-    <products>
-      <figure>
-        <img src="resources/media/pen.png" alt="pen image" /><figcaption>Exploding Pen</figcaption>
-      </figure>
-      <figure>
-        <img src="resources/media/watch.png" alt="watch image" /><figcaption>Cellular Watch</figcaption>
-      </figure>
-      <figure>
-        <img src="resources/media/glasses.png" alt="glasses image" /><figcaption>Thermal Glasses</figcaption>
-      </figure>
-    </products>
-    <loc-hour>
-      <location>
-        <p>Location</p>
-        <p>-47.346436, 84.32354
-      </location>
-      <hours>
-        <p>Hours</p>
-        <p>0800 - 1800</p>
-      </hours>
-    </loc-hour>
+  <div class="products-container">
+    <div class="product">
+      <div class="product-image">
+        <img src="resources/media/pen.png" alt="pen image" />
+      </div>
+      <p>Exploding Pen</p>
+    </div>
+    <div class="product">
+      <div class="product-image">
+        <img src="resources/media/watch.png" alt="watch image" />
+      </div>
+      <p>Cellular Watch</p>
+    </div>
+    <div class="product">
+      <div class="product-image">
+        <img src="resources/media/glasses.png" alt=" dark glasses image" />
+      </div>
+      <p>Thermal Glasses</p>
+    </div>
+  </div>
+  </div>
+  <div class="lh">
+    <div class="lh-box">
+      <div class="top"><p>Location</p></div>
+      <div class="bottom"><p>-47.346436, 84.32354</p></div>
+    </div>
+    <div class="lh-box">
+      <div class="top"><p>Hours</p></div>
+      <div class="bottom"><p>0800 - 1800</p></div>
+    </div>
+  </div>
     <footer>
       <p>Copyright Secret Agent Supply Inc.</p>
     </footer>
