--- a/index-old.html
+++ b/index-old.html
@@ -10,50 +10,41 @@
 </head>
 
 <body>
-  <!--logo-->
   <div class="logobar">
-    <div class="logobar container">
+    <div class="logobar-container">
       <img src="resources/media/logo.png" alt="logo" />
       <div class="name">Secret Agent Supply Inc.</div>
     </div>
   </div>
-  <!--banner image with "new arrivals"-->
   <div class="banner">
-    <div class="container">
-      <div class="banner container text">
-        <p>New Arrival</p>
-        <h1>Sports Bikes and Motorcycles</h1>
-      </div>
+    <div class="banner-container">
+      <p>New Arrival</p>
+      <h1>Sports Bikes and Motorcycles</h1>
     </div>
   </div>
-  <!--navigation bar-->
   <div class="navbar">
-    <div class="container">
-      <p><a href="#">Eyewear</a></p>
-      <p><a href="#">Apparel</a></p>
-      <p><a href="#">Gadgets</a></p>
-      <p><a href="#">Vehicles</a></p>
-      <p><a href="#">Classes</a></p>
-      <p><a href="#">Contact</a></p>
+    <div class="navbar-container">
+        <p><a href="#">Eyewear</a></p>
+        <p><a href="#">Apparel</a></p>
+        <p><a href="#">Gadgets</a></p>
+        <p><a href="#">Vehicles</a></p>
+        <p><a href="#">Classes</a></p>
+        <p><a href="#">Contact</a></p>
     </div>
   </div>
-  <!--products-->
-  <div class="products container">
-    <!--pen-->
+  <div class="products-container">
     <div class="product">
       <div class="product-image">
         <img src="resources/media/pen.png" alt="pen image" />
       </div>
       <p>Exploding Pen</p>
     </div>
-    <!--watch-->
     <div class="product">
       <div class="product-image">
         <img src="resources/media/watch.png" alt="watch image" />
       </div>
       <p>Cellular Watch</p>
     </div>
-    <!--glasses-->
     <div class="product">
       <div class="product-image">
         <img src="resources/media/glasses.png" alt=" dark glasses image" />
@@ -61,24 +52,20 @@
       <p>Thermal Glasses</p>
     </div>
   </div>
-  <!--location and hours-->
+  </div>
   <div class="lh">
-    <div class="container">
-      <div class="lh-box">
-        <div class="top"><p>Location</p></div>
-        <div class="bottom"><p>-47.346436, 84.32354</p></div>
-      </div>
-      <div class="lh-box">
-        <div class="top"><p>Hours</p></div>
-        <div class="bottom"><p>0800 - 1800</p></div>
-      </div>
+    <div class="lh-box">
+      <div class="top"><p>Location</p></div>
+      <div class="bottom"><p>-47.346436, 84.32354</p></div>
+    </div>
+    <div class="lh-box">
+      <div class="top"><p>Hours</p></div>
+      <div class="bottom"><p>0800 - 1800</p></div>
     </div>
   </div>
-  <!--footer-->
-  <div class="footer">
-    <div class="container">
+    <footer>
       <p>Copyright Secret Agent Supply Inc.</p>
-    </div>
+    </footer>
   </div>
 </body>
 
