Medium screen works.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!--banner image with "new arrivals"-->
   <div class="banner">
     <div class="container">
-      <div class="banner container text">
+      <div class="text">
         <p>New Arrival</p>
         <h1>Sports Bikes and Motorcycles</h1>
       </div>
@@ -28,13 +28,16 @@
   </div>
   <!--navigation bar-->
   <div class="navbar">
-    <div class="container">
+    <div class="container menu-expand">
       <p><a href="#">Eyewear</a></p>
       <p><a href="#">Apparel</a></p>
       <p><a href="#">Gadgets</a></p>
       <p><a href="#">Vehicles</a></p>
       <p><a href="#">Classes</a></p>
       <p><a href="#">Contact</a></p>
+    </div>
+    <div class="container menu-small"
+      <p><a href="#">Menu</a></p>
     </div>
   </div>
   <!--products-->
@@ -47,14 +50,14 @@
       <p>Exploding Pen</p>
     </div>
     <!--watch-->
-    <div class="product">
+    <div class="product" id="watch">
       <div class="product-image">
         <img src="resources/media/watch.png" alt="watch image" />
       </div>
       <p>Cellular Watch</p>
     </div>
     <!--glasses-->
-    <div class="product">
+    <div class="product" id="glasses">
       <div class="product-image">
         <img src="resources/media/glasses.png" alt=" dark glasses image" />
       </div>
