--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Secret Agent Supply Inc.</title>
   <meta content="Codeacademy project for Unit 5">
-  <link href="resources/css.reset.css" rel="stylesheet" type="text/css">
+  <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
   <link href="resources/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
